Refactor Shhh
